--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v4
       - uses: opentofu/setup-opentofu@v1
         with:
           tofu_wrapper: false
